--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="PAFIOhewShvDwN3A8ah6JkjODbtGbzR5h-dXm2qUOrY"/>
   <title>Horoscope Oracle</title>
   <meta name="description" content="Horoscope Oracle du Jour – Une application responsive développée par Magali Bernardin-Bichet, en formation AFPA. Tirez vos 12 cartes, découvrez votre horoscope avec animations et loader.">
   <meta name="author" content="Magali Bernardin-Bichet">
