--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="description" content="Horoscope Oracle du Jour – Une application responsive développée par Magali Bernardin-Bichet, en formation AFPA. Tirez vos 12 cartes, découvrez votre horoscope avec animations et loader.">
   <meta name="author" content="Magali Bernardin-Bichet">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Horoscope Oracle – Magali Bernardin‑Bichet">
+  <meta property="og:title" content="Horoscope Oracle – Magali Bernardin-Bichet">
   <meta property="og:description" content="Tirez vos 12 cartes et découvrez votre horoscope du jour avec animations.">
-  <meta property="og:image" content="url-de-l’image‑partage.jpg">
+  <meta property="og:image" content="url-de-l’image-partage.jpg">
   <meta name="keywords" content="horoscope, oracle, tarot, astre">
   <link rel="preload" href="./assets/css/styles.css" as="style">
   <link rel="stylesheet" href="./assets/css/styles.css">
@@ -72,7 +72,7 @@
       <h2 id="mentions-title">Mentions légales & RGPD</h2>
         <p><strong>Responsable du traitement :</strong> Magali Bernardin-Bichet</p>
         <p><strong>Adresse :</strong> AFPA de Châtellerault, France</p>
-        <p><strong>Contact :</strong> <a href="mailto:magali@example.com">magali@example.com</a></p>
+        <p><strong>Contact :</strong> <a href="mailto:magali@example.com">m.bernardin.bichet@gmail.com</a></p>
         <p><strong>Finalité du traitement :</strong> Fournir des horoscopes personnalisés via une API externe.</p>
         <p><strong>Base légale du traitement :</strong> Consentement de l'utilisateur.</p>
         <p><strong>Destinataires des données :</strong> Les données ne sont pas transmises à des tiers.</p>
