--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
   <link rel="shortcut icon" href="./assets/images/astrologie.png" type="image/x-icon">
 </head>
 <body>
-  <video autoplay muted loop aria-hidden="true" tabindex="-1"  aria-label="Vidéo de fond décorative, sans information essentielle"id="background-video">
-    <source src="./assets/video/astrologie.mp4"  type="video/mp4" alt="">
+  <video autoplay muted loop aria-hidden="true" tabindex="-1"  aria-label="Vidéo de fond représentant une roue astrologique avec des signes zodiacaux, dans des teintes dorées, noires et vertes,orange animée pour enrichir l'ambiance de l'application"id="background-video">
+    <source src="./assets/video/astrologie.mp4"  type="video/mp4" alt="Vidéo de fond représentant une roue astrologique avec des signes zodiacaux, dans des teintes dorées, noires et vertes,orange, animée pour enrichir l'ambiance de l'application">
   </video>
-
   <header>
     <div class="logo-container">
-      <img src="./assets/images/image-fond2.png" alt="Logo Zodiaque" class="logo">
+      <img src="./assets/images/image-fond2.png" alt="Cette image est un portrait stylisé d'une femme noire de profil, avec des cheveux courts et bouclés ornés de lignes décoratives, entourée d'un cercle coloré aux teintes chaudes et froides." class="logo">
       <h1>Horoscope Oracle</h1>
     </div>
     <div class="date-container">
@@ -58,7 +57,7 @@
 
         <p>Ce projet démontre mes compétences en structuration de code, responsive design, intégration API et UX</p>
         <p>Merci de découvrir <strong>Horoscope Oracle</strong>, et que chaque message vous apporte inspiration et sérénité.</p>
-    </section>
+   </section>
     <section id="cards-container" class="cards-grid" style="display: none;"></section>
   </main>
   <footer>
@@ -81,8 +80,9 @@
         <p><strong>Hébergeur :</strong> WebHosting Inc. – 123 Rue Imaginaire, 75000 Paris, France – Tél : +33 1 23 45 67 89</p>
         <p><strong>Directeur de la publication :</strong> Magali Bernardin-Bichet</p>
     </div>
- </aside>
-    <script src="./assets/js/script.js"></script>
+  </aside>
+  <button id="back-to-top" aria-label="Retour en haut">⬆️</button>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
 
