--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
   <section id="bouton-section">
-    <button id="tirer-cartes">🔮 Tirez les 12 cartes</button>
+    <button id="tirer-cartes">🔮 Tirer les 12 cartes</button>
     <p id="loading-message" role="status" aria-live="polite" class="loadingChargement" style="display: none;">⏳ Chargement des cartes encours</p>
   </section>
   <main>
