--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <video autoplay muted loop aria-hidden="true" tabindex="-1"  aria-label="Vidéo de fond représentant une roue astrologique avec des signes zodiacaux, dans des teintes dorées, noires et vertes,orange animée pour enrichir l'ambiance de l'application"id="background-video">
-    <source src="./assets/video/astrologie.mp4"  type="video/mp4" alt="Vidéo de fond représentant une roue astrologique avec des signes zodiacaux, dans des teintes dorées, noires et vertes,orange, animée pour enrichir l'ambiance de l'application">
+    <source src="./assets/video/astrologie-remasterisé.mp4"  type="video/mp4" alt="Vidéo de fond représentant une roue astrologique avec des signes zodiacaux, dans des teintes dorées, noires et vertes,orange, animée pour enrichir l'ambiance de l'application">
   </video>
   <header>
     <div class="logo-container">
